fix: fixes horizontal scroll on single project pages with video elements

--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -21,6 +21,10 @@ ul {
     margin: 0;
 }
 
+video.project__img-container {
+    margin-right: 0;
+}
+
 .project-nav {
     position: fixed;
     bottom: 3rem;
@@ -57,9 +61,6 @@ ul {
 
 .title {
     grid-column: span 6;
-    display: grid;
-    grid-template-columns: 3rem 1fr;
-    align-items: baseline;
 }
 
 .info {
